--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -11,9 +11,9 @@
                 <!-- question-name -->
                 <div class="form-group">
                     <label for="question-name"
-                           i18n>Fragen ID
-                        <span (click)="questionsettingsmodal.scrollToFooter()"
-                              role="button">*</span>
+                           (click)="questionsettingsmodal.scrollToFooter()"
+                           role="button"
+                           i18n>Fragen ID *
                     </label>
                     <input type="text"
                            class="form-control"
@@ -36,9 +36,9 @@
                 <!-- question-title -->
                 <div class="form-group">
                     <label for="question-title"
-                           i18n>Fragen Titel
-                        <span (click)="questionsettingsmodal.scrollToFooter()"
-                              role="button">*</span>
+                           (click)="questionsettingsmodal.scrollToFooter()"
+                           role="button"
+                           i18n>Fragen Titel *
                     </label>
                     <input type="text"
                            class="form-control"
