--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -40,15 +40,15 @@
     </div>
 </div> -->
 <div class="container-xl border">
-    <div class="row pl-md-5 pt-md-5 pr-md-0 pb-md-0 p-2">
-        <div class="col-md-6 p-0">
-            <div class="img1 col-md-12 p-0">
+    <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
+        <div class="col-lg-6 p-0">
+            <div class="boris-img col-lg-12 p-0">
                 <!-- <img class="img-fluid rounded"
                      src="../../../assets/IMG_4956_h.JPG"> -->
             </div>
         </div>
-        <div class="col-md-6 px-0 pl-md-5 pt-2 pt-md-0">
-            <div class="content col-md-12 text-dark p-5 rounded-left">
+        <div class="col-lg-6 px-0 pl-lg-5 pt-2 pt-lg-0">
+            <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/bodenrichtwerte']"
                    i18n>BORIS.NI</a>
@@ -56,15 +56,14 @@
                    i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</p>
                 <p class="lead text-justify"
                    i18n>{{ 'Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte' +
-                    'in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und' +
-                    'für Flächen der Land- und Forstwirtschaft zur Verfügung.' | hyphenate }} </p>
-                <input placeholder="Geben Sie einen Ort ein">
+                    ' in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und' +
+                    ' für Flächen der Land- und Forstwirtschaft zur Verfügung.' | hyphenate }} </p>
             </div>
         </div>
     </div>
-    <div class="row pr-md-5 pt-md-5 pl-md-0 pb-md-0 p-2">
-        <div class="col-md-9 p-0 pr-md-5 pt-2 pt-md-0">
-            <div class="content col-md-12 text-dark p-5 rounded-right">
+    <div class="row pr-lg-5 pt-lg-5 pl-lg-0 pb-lg-0 p-2">
+        <div class="col-lg-9 p-0 pr-lg-5 pt-2 pt-lg-0">
+            <div class="content col-lg-12 text-dark p-5 rounded-right">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>NIPIX</a>
@@ -72,55 +71,99 @@
                    i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</p>
                 <p class="lead text-justify"
                    i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
-                    'Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
-                    '„Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
-                    'Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
+                    ' Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
+                    ' „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
+                    ' Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
             </div>
         </div>
-        <div class="col-md-3 pr-md-0 pr-0 pl-0 order-md-last order-first">
-            <div class="img1 col-md-12 p-0">
+        <div class="col-lg-3 pr-lg-0 pr-0 pl-0 order-lg-last order-first">
+            <div class="nipix-img col-lg-12 p-0">
                 <!-- <img class="img-fluid rounded"
                      src="../../../assets/IMG_8355.JPG"> -->
             </div>
         </div>
     </div>
-    <div class="row pl-md-5 pt-md-5 pr-md-0 pb-md-0 p-2">
-        <div class="col-md-3 pr-0 pl-md-0 pl-0">
-            <div class="img1 col-md-12 p-0">
+    <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
+        <div class="col-lg-6 pr-0 pl-lg-0 pl-0">
+            <div class="form-img col-lg-12 p-0">
                 <!-- <img class="img-fluid rounded"
                      src="../../../assets/IMG_Fragebogen.webp"> -->
             </div>
         </div>
-        <div class="col-md-9 pr-md-0 pr-0 pl-md-5 pl-0 pt-2 pt-md-0">
-            <div class="content col-md-12 text-dark p-5 rounded-left">
+        <div class="col-lg-6 pr-lg-0 pr-0 pl-lg-5 pl-0 pt-2 pt-lg-0">
+            <div class="content col-lg-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>Fragebogen-Online</a>
                 <p class="lead text-justify pt-3"
                    i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
-                   'Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
-                   '„Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
-                   'Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
-                <input class="w-mobile mr-2"
-                       placeholder="Formular PIN">
-                <button type="submit"
-                        class="btn btn-success"
-                        i18n-title
-                        title="Absenden">
-                    <svg width="1.5em"
-                         height="1.5em"
-                         viewBox="0 0 16 16"
-                         class="bi bi-play-fill align-top"
-                         fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg"
-                         aria-hidden="true">
-                        <path
-                              d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
-                    </svg>
-                    <span class="sr-only"
-                          i18n>Absenden</span>
-                </button>
+                   ' Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
+                   ' „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
+                   ' Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
+                <form #pinFormular="ngForm"
+                      i18n-aria-label
+                      aria-label="Eingabe einer PIN zum Formular ausfüllen"
+                      (ngSubmit)="submitPIN(pin.value)"
+                      class="form-inline">
+                    <label class="control-label sr-only"
+                           for="pin"
+                           i18n>Formular PIN</label>
+                    <input type="text"
+                           class="form-control mr-2 w-mobile"
+                           id="pin"
+                           i18n-placeholder
+                           placeholder="Formular PIN"
+                           #pin>
+
+                    <button type="submit"
+                            class="btn btn-success"
+                            i18n-title
+                            title="Absenden">
+                        <svg width="1.5em"
+                             height="1.5em"
+                             viewBox="0 0 16 16"
+                             class="bi bi-play-fill align-top"
+                             fill="currentColor"
+                             xmlns="http://www.w3.org/2000/svg"
+                             aria-hidden="true">
+                            <path
+                                  d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
+                        </svg>
+                        <span class="sr-only"
+                              i18n>Absenden</span>
+                    </button>
+                </form>
             </div>
+        </div>
+    </div>
+</div>
+<div class="container-xl mt-5">
+    <div class="row jumbotron mb-0">
+        <div class="col-lg-12">
+            <h2>
+                <svg width="1em"
+                     height="1em"
+                     viewBox="0 0 16 16"
+                     class="bi bi-card-text"
+                     fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
+                    <path fill-rule="evenodd"
+                          d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
+                </svg>
+                <span class="ml-1"
+                      i18n>News</span>
+            </h2>
+            <hr class="my-4">
+        </div>
+        <div class="col-lg-6">
+            <h5>{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
+            <a>{{ 'Eine Dekade steigender Preise in Niedersachsen...' | hyphenate }}</a>
+        </div>
+        <div class="col-lg-6">
+            <h5>{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
+            <a>{{ 'Die neuen Bodenrichtwerte sind jetzt verfügbar...' | hyphenate }}</a>
         </div>
     </div>
 </div>
