--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,51 +1,7 @@
-<!-- <div class="position-relative overflow-hidden p-3 p-md-5 h-50 text-center">
-    <div class="col-lg-5 p-lg-5 mx-auto my-5 headline">
-        <h2 i18n>Bodenrichtwerte</h2>
-        <p class="lead"
-           i18n>für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
-        <a class="btn btn-danger"
-           [routerLink]="['/bodenrichtwerte']"
-           i18n>Zur Anwendung</a>
-    </div>
-    <div class="bg-dark shadow-sm mx-auto d-lg-inline d-xl-none"
-         style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-    <div class="product-device shadow-sm d-none d-lg-block"></div>
-    <div class="product-device product-device-2 shadow-sm d-none d-lg-block"></div>
-</div>
-
-<div class="d-lg-flex flex-md-equal w-0 h-50">
-    <div class="position-relative overflow-hidden pt-3 px-3 pt-md-5 px-md-5 text-center"
-         style="height: 500px;">
-        <div class="col-lg-7 mx-auto headline">
-            <h2 class="font-weight-normal"
-                i18n>Immobilienpreis-Index</h2>
-            <a class="btn btn-danger"
-               [routerLink]="['/immobilienpreisindex']"
-               i18n>Zur Anwendung</a>
-        </div>
-        <div class="product-device-3 shadow-sm d-none d-lg-block"></div>
-    </div>
-
-    <div class="position-relative pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-        <div class="col-lg-7 mx-auto headline">
-            <h2 class="font-weight-normal"
-                i18n>Online Formulare</h2>
-            <a class="btn btn-danger"
-               [routerLink]="['/forms']"
-               i18n>Zur Anwendung</a>
-        </div> -->
-<!-- <div class="bg-dark shadow-sm"
-             style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
-<!-- <div class="product-device-4 shadow-sm mx-auto d-none d-lg-block"></div>
-    </div>
-</div> -->
-<div class="container-xl border">
+<div class="container-xl border-left border-right">
     <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
         <div class="col-lg-6 p-0">
-            <div class="boris-img col-lg-12 p-0">
-                <!-- <img class="img-fluid rounded"
-                     src="../../../assets/IMG_4956_h.JPG"> -->
-            </div>
+            <div class="boris-img col-lg-12 p-0"></div>
         </div>
         <div class="col-lg-6 px-0 pl-lg-5 pt-2 pt-lg-0">
             <div class="content col-lg-12 text-dark p-5 rounded-left">
@@ -77,18 +33,12 @@
             </div>
         </div>
         <div class="col-lg-3 pr-lg-0 pr-0 pl-0 order-lg-last order-first">
-            <div class="nipix-img col-lg-12 p-0">
-                <!-- <img class="img-fluid rounded"
-                     src="../../../assets/IMG_8355.JPG"> -->
-            </div>
+            <div class="nipix-img col-lg-12 p-0"></div>
         </div>
     </div>
     <div class="row pl-lg-5 pt-lg-5 pr-lg-0 pb-lg-0 p-2">
         <div class="col-lg-6 pr-0 pl-lg-0 pl-0">
-            <div class="form-img col-lg-12 p-0">
-                <!-- <img class="img-fluid rounded"
-                     src="../../../assets/IMG_Fragebogen.webp"> -->
-            </div>
+            <div class="form-img col-lg-12 p-0"></div>
         </div>
         <div class="col-lg-6 pr-lg-0 pr-0 pl-lg-5 pl-0 pt-2 pt-lg-0">
             <div class="content col-lg-12 text-dark p-5 rounded-left">
