navbar/footer item color

--- a/power/src/app/app.component.scss
+++ b/power/src/app/app.component.scss
@@ -8,15 +8,15 @@
 
 .footer-link,
 .navbar-nav .nav-item .nav-link {
-    color: #0173ec;
+    color: #121416;
 }
 
 .footer-link:hover,
 .navbar-nav .nav-item.active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
-    color: #0052a9;
+    color: #c4153a;
 }
 
 .navbar-nav .nav-item .nav-link.active {
-    color: #004084;
+    color: #c4153a;
 }
