--- a/power/src/app/static/feedback/feedback.component.scss
+++ b/power/src/app/static/feedback/feedback.component.scss
@@ -6,7 +6,7 @@ ul {
 .btn-circle {
     width: 30px;
     height: 30px;
-    padding: 6px 0px;
+    padding: 6px 0;
     border-radius: 15px;
     text-align: center;
     font-size: 12px;
