Make svg not focusable

--- a/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
+++ b/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
@@ -9,6 +9,7 @@
          class="bi bi-eye-fill"
          fill="currentColor"
          xmlns="http://www.w3.org/2000/svg"
+         focusable="false"
          aria-hidden="true">
         <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
         <path fill-rule="evenodd"
