--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -11,6 +11,7 @@
                  class="bi bi-file-earmark-medical align-baseline"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 focusable="false"
                  aria-hidden="true">
                 <path
                       d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
@@ -47,6 +48,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -60,6 +64,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -81,6 +88,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -94,6 +104,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
