--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -106,6 +106,7 @@
                              class="bi bi-file-person align-top"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
                                   d="M4 1h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H4z" />
