--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
                  class="bi bi-list-ul"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 focusable="false"
                  aria-hidden="true">
                 <path fill-rule="evenodd"
                       d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
@@ -52,7 +53,10 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
                                          role="button"
+                                         focusable="false"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -65,6 +69,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -95,7 +102,10 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
                                          role="button"
+                                         focusable="false"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -108,7 +118,10 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
                                          role="button"
+                                         focusable="false"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -129,7 +142,10 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
                                          role="button"
+                                         focusable="false"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -142,7 +158,10 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
                                          role="button"
+                                         focusable="false"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -215,6 +234,7 @@
                  class="bi bi-file-earmark-medical align-baseline"
                  fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg"
+                 focusable="false"
                  aria-hidden="true">
                 <path
                       d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
@@ -269,6 +289,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -282,6 +305,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -303,6 +329,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -316,6 +345,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -346,6 +378,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -359,6 +394,9 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         focusable="false"
                                          role="button"
                                          aria-hidden="true">
                                         <path
@@ -400,6 +438,7 @@
                                      class="bi bi-trash-fill align-baseline"
                                      fill="currentColor"
                                      xmlns="http://www.w3.org/2000/svg"
+                                     focusable="false"
                                      aria-hidden="true">
                                     <path fill-rule="evenodd"
                                           d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
@@ -428,6 +467,7 @@
                      class="bi bi-plus align-top"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
                           d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
@@ -449,6 +489,7 @@
                      class="bi bi-cloud-arrow-up align-top"
                      fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg"
+                     focusable="false"
                      aria-hidden="true">
                     <path fill-rule="evenodd"
                           d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z" />
