--- a/power/src/app/fragebogen/editor/answers/answers.component.html
+++ b/power/src/app/fragebogen/editor/answers/answers.component.html
@@ -52,6 +52,7 @@
                          class="bi bi-caret-up align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M3.204 11L8 5.519 12.796 11H3.204zm-.753-.659l4.796-5.48a1 1 0 0 1 1.506 0l4.796 5.48c.566.647.106 1.659-.753 1.659H3.204a1 1 0 0 1-.753-1.659z" />
@@ -72,6 +73,7 @@
                          class="bi bi-caret-down align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M3.204 5L8 10.481 12.796 5H3.204zm-.753.659l4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659z" />
@@ -94,6 +96,7 @@
                          class="bi bi-trash-fill align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
@@ -134,6 +137,7 @@
                              class="bi bi-trash-fill align-baseline"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
                                   d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
@@ -156,6 +160,7 @@
                          class="bi bi-cloud-arrow-up align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z" />
@@ -188,6 +193,7 @@
          class="bi bi-plus align-baseline"
          fill="currentColor"
          xmlns="http://www.w3.org/2000/svg"
+         focusable="false"
          aria-hidden="true">
         <path fill-rule="evenodd"
               d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
