--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -163,6 +163,7 @@
              class="bi bi-dash align-baseline"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
+             focusable="false"
              aria-hidden="true">
             <path fill-rule="evenodd"
                   d="M3.5 8a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.5-.5z" />
@@ -179,6 +180,7 @@
              class="bi bi-plus align-baseline"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
+             focusable="false"
              aria-hidden="true">
             <path fill-rule="evenodd"
                   d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
