--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -12,6 +12,7 @@
                          class="bi bi-file-earmark-medical align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path
                               d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
@@ -54,6 +55,7 @@
                                  class="bi bi-play-fill align-top"
                                  fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg"
+                                 focusable="false"
                                  aria-hidden="true">
                                 <path
                                       d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
@@ -75,6 +77,7 @@
                          class="bi bi-search align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
@@ -97,6 +100,7 @@
                              class="bi bi-box-arrow-right align-baseline"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
                                   d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z" />
@@ -121,7 +125,9 @@
                          viewBox="0 0 16 16"
                          class="bi bi-person-circle align-baseline"
                          fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg">
+                         xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
+                         aria-hidden="true">
                         <path
                               d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z" />
                         <path fill-rule="evenodd"
@@ -154,6 +160,7 @@
                          class="bi bi-person-bounding-box align-baseline"
                          fill="currentColor"
                          xmlns="http://www.w3.org/2000/svg"
+                         focusable="false"
                          aria-hidden="true">
                         <path fill-rule="evenodd"
                               d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1h-3zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5zM.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5z" />
@@ -176,6 +183,7 @@
                              class="bi bi-box-arrow-right align-baseline"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             focusable="false"
                              aria-hidden="true">
                             <path fill-rule="evenodd"
                                   d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z" />
