--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -75,6 +75,7 @@
                              class="bi bi-play-fill align-top"
                              fill="currentColor"
                              xmlns="http://www.w3.org/2000/svg"
+                             focusable="false"
                              aria-hidden="true">
                             <path
                                   d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
@@ -96,7 +97,9 @@
                      viewBox="0 0 16 16"
                      class="bi bi-card-text"
                      fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
+                     xmlns="http://www.w3.org/2000/svg"
+                     focusable="false"
+                     aria-hidden="true">
                     <path fill-rule="evenodd"
                           d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
                     <path fill-rule="evenodd"
